# benchmark

./: .gitignore  CONTRIBUTING.md  README.md  README_HF.md  package-lock.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  documentation.md  new_application.md  new_layer.md  update_application.md
.github/workflows/: deploy.yml  mkdocs.yml  sync-hf.yml  update-release-table.yml
.scarfbench/logs/: benchtest.logs.2026-03-08T16:00:06.569200006+00:00.jsonl  benchtest.logs.2026-03-08T16:48:17.339830120+00:00.jsonl  benchtest.logs.2026-03-08T23:51:32.541739048+00:00.jsonl  benchtest.logs.2026-03-09T01:33:42.620355043+00:00.jsonl  benchtest.logs.2026-03-09T02:32:59.266205483+00:00.jsonl  benchtest.logs.2026-03-09T04:01:29.609183068+00:00.jsonl
benchmark/.claude/: settings.local.json
benchmark/business_domain/.claude/: settings.local.json
benchmark/business_domain/cart/: .AGENTS.md  cart.feature
benchmark/business_domain/converter/: converter.feature
benchmark/business_domain/counter/: counter.feature
benchmark/business_domain/helloservice/: helloservice.feature
benchmark/business_domain/standalone/: standalone.feature
benchmark/dependency_injection/billpayment/: billpayment.feature
benchmark/dependency_injection/decorators/: decorators.feature
benchmark/dependency_injection/encoder/: encoder.feature
benchmark/dependency_injection/guessnumber/: guessnumber.feature
benchmark/dependency_injection/producerfields/: producerfields.feature
benchmark/dependency_injection/producermethods/: producermethods.feature
benchmark/dependency_injection/simplegreeting/: simplegreeting.feature
benchmark/infrastructure/concurrency-jobs/: concurrency-jobs.feature
benchmark/infrastructure/concurrency-taskcreator/: concurrency-taskcreator.feature
benchmark/infrastructure/ejb-async/: ejb-async.feature
benchmark/infrastructure/ejb-interceptor/: ejb-interceptor.feature
benchmark/infrastructure/ejb-timersession/: ejb-timersession.feature
benchmark/persistence/address-book/: address-book.feature
benchmark/persistence/order/: order.feature
benchmark/persistence/roster/: roster.feature
benchmark/presentation/dukeetf/: dukeetf.feature
docs/: README.md  astro.config.mjs
scarf/: Cargo.toml  README.md  conversions.csv  long-example.yaml  requirements.txt
scarf-py/: conversions-example.md  short-example.yaml
scarf-py/dockerfiles/: quarkus_Dockerfile  spring_Dockerfile
scarf-py/scarfbench/: __init__.py  __main__.py  cli.py
scarf-rs/: .gitignore  AGENT.md  Cargo.toml  Makefile  README.md
scarf-rs/src/: cli.rs  main.rs  utils.rs
scarf-rs/src/bench/: list.rs  mod.rs  test.rs
scarf-rs/src/eval/: driver.rs  mod.rs  prepare.rs  run.rs  types.rs
scarf-rs/src/utils/: mod.rs
scarf-rs/tests/: scarf_bench_cmd.rs  scarf_eval_cmd.rs
scarf-rs/tests/fixtures/test_agent/: run.sh
scarf-rs/tests/helpers/: mod.rs
scarf/dockerfiles/: jakarta_Dockerfile
site/: .gitignore  Makefile  mkdocs.yml  pyproject.toml
site/docs/: benchmark.md  business_domain.md  cargotracker.md  citation.md  coffee_shop.md  daytrader.md  dependency_injection.md  index.md  infrastructure.md  installing.md  integration.md  leaderboard.md  persistence.md  petclinic.md  presentation.md  quickstart.md  realworld.md  resources.md  security.md  whole_applications.md
site/docs/core-concepts/: index.md
site/docs/layouts/: custom.yml
site/docs/leaderboard/: index.html
site/docs/reference/python-api/: c-cpp.md  core.md  index.md  java.md  python.md
site/docs/reference/ts-api/: index.md
tools/benchtest/: pyproject.toml
(+911 files in other folders)
