[package]
name = "scarf"
version = "0.1.0"
edition = "2024"
include = [
  "Cargo.toml",
  "src/**",
  "README.md",
  "LICENSE*",
]
authors = ["Rahul Krishna <i.m.ralk@gmail.com>"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.55", features = ["derive"]}
comfy-table = "7.2.2"
env_logger = "0.11"
log = "0.4.29"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syntect = "5.3.0"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.24.0"
