[tool.poetry]
name = "scarfbench"
version = "1.0.0"
package-mode = false
description = "A Benchmark of Self-Contained Application Refactoring and Framework Migration Examples."
authors = ["Rahul Krishna <i.m.ralk@gmail.com>", "Bridget McGinn <bridget.mcginn@ibm.com>",
            "Raju Pavuluri <pavuluri@us.ibm.com>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://ibm.github.io/scarfbench"
repository = "https://github.com/ibm/scarfbench"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Java",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark"
]


[tool.poetry.dependencies]
python = ">=3.11"
mkdocs-material = {extras = ["imaging"], version = "^9.7.1"}
mkdocs-get-deps = "^0.2.0"
mkdocs-material-extensions = "^1.3.1"
mkdocstrings = "^1.0.0"
mkdocstrings-python = "^2.0.1"
mkdocs-git-revision-date-localized-plugin = "^1.5.0"
mkdocs-autorefs = "^1.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

########################################
# Tool configurations
########################################
[tool.flake8]
max-line-length = 180
count = true

[tool.black]
line-length = 180

[tool.pylint.'MESSAGES CONTROL']
disable = "no-member,protected-access,global-statement"

[tool.pylint.FORMAT]
max-line-length = 180

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--pspec --cov=cldk --cov-fail-under=50"
testpaths = ["tests"]

[tool.coverage.run]
source = ["cldk"]
omit = [
    "venv/*",
    ".venv/*"
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: no branch",
    "pass",
    "subprocess.CalledProcessError",
    "sys.exit",
    "if __name__ == .__main__.:"
]
ignore_errors = true

[tool.coverage.xml]
output="./coverage.xml"

[tool.coverage.html]
title = "Test Coverage Report"
directory = "coverage_html_report"

[tool.cldk.testing]
sample-application = "tests/resources/java/application/"
sample-application-analysis-json = "tests/resources/java/analysis_json/"
codeanalyzer-jar-path = "tests/resources/java/codeanalyzer_jars/"
